--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "Simon Duff <simon.duff@gmail.com>"
   ,
   "dependencies": {
-    "axios": "^0.16.0",
+    "axios": ">=0.18.1",
     "body-parser": "^1.18.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.3",
